count rereads in book and page counts

--- a/GR_graphs.Rmd
+++ b/GR_graphs.Rmd
@@ -13,6 +13,56 @@ library(knitr)
 books <- read_csv("data/goodreads_library_export_20211231.csv",
                   col_types = cols(`Date Read`=col_date(format="%Y/%m/%d"),
                                    `Date Added`=col_date(format="%Y/%m/%d")))
+# Manually add additional dates for rereads
+reread_dates <- tribble(
+      ~Index, ~Date,
+      1, "2019-01-19", # Dealing w Dragons
+      2, "2021-05-15", # Da Vinci Code
+      3, "2018-04-15", # Harry 1
+      4, "2019-10-03", # Harry 1
+      5, "2018-04-15", # Harry 2
+      6, "2019-10-04", # Harry 2
+      7, "2018-04-19", # Harry 3
+      8, "2019-10-04", # Harry 3
+      9, "2018-04-25", # Harry 4
+      10, "2019-10-08", # Harry 4
+      11, "2018-05-03", # Harry 5
+      12, "2019-10-15", # Harry 5
+      13, "2018-05-06", # Harry 6
+      14, "2019-10-19", # Harry 6
+      15, "2018-05-08", # Harry 7
+      16, "2019-10-26", # Harry 7
+      17, "2020-08-21", # Eragon
+      18, "2021-01-28", # Dune
+      19, NA, # Ender's Game 
+      20, "2017-05-20", # Little Prince
+      21, "2020-12-21", # Little Prince
+      22, NA, # Hobbit
+      23, NA, # Fahrenheit 451
+      24, NA, # Night
+      25, "2021-08-12", # Wrinkle in Time
+      26, "2018-05-26", # Sun and Her Flowers
+      27, "2019-08-21", # Sun and Her Flowers
+      28, NA, # Brave New World
+      29, "2020-12-02", # Brave New World
+      30, "2019-07-06", # Fifth Season
+      31, NA, # Once Upon a Marigold
+      32, NA, # House of the Scorpion
+      33, "2021-12-05", # Eye of World
+      34, "2020-07-30", # AART
+      35, "2021-01-29", # Murderbot
+      36, NA, # Giver
+      37, NA, # Animal Farm
+      38, NA # Sherlock 3
+) %>%
+      mutate(Date = date(Date))
+rereads <- books %>% 
+      filter(`Read Count` > 1) %>%
+      arrange(`Date Read`) %>%
+      uncount(`Read Count`-1) %>% # Must subtract 1 so merging doesn't duplicate
+      mutate(`Date Read`=replace(`Date Read`,
+                                 reread_dates$Index, reread_dates$Date)) %>%
+      bind_rows(books)
 ```
 
 ## Goodreads redone
@@ -23,7 +73,7 @@ minYear <- year(min(books$`Date Read`, na.rm = TRUE))
 maxYear <- year(max(books$`Date Read`, na.rm = TRUE))
 
 # Books per year
-books %>%
+rereads %>%
       filter(!is.na(`Date Read`)) %>%
       mutate(YearRead = year(`Date Read`)) %>%
       ggplot(data=.) +
@@ -37,7 +87,7 @@ books %>%
             axis.line = element_line())
 
 # Pages per year
-books %>%
+rereads %>%
       filter(!is.na(`Date Read`)) %>%
       mutate(YearRead = year(`Date Read`)) %>%
       ggplot(data=.) +
@@ -57,7 +107,7 @@ books %>%
 # I have a couple outliers, so set a minimum publication date
 earliestPub <- 1800
 
-books %>%
+rereads %>%
       filter(!is.na(`Date Read`)) %>%
       ggplot(data=.) +
       geom_point(aes(x=`Date Read`, y=`Original Publication Year`),
@@ -72,7 +122,7 @@ books %>%
 
 ```{r BooksAndPagesMonth}
 # Books by month
-books %>%
+rereads %>%
       filter(!is.na(`Date Read`)) %>%
       mutate(MonthRead = floor_date(`Date Read`, "month")) %>%
       group_by(MonthRead) %>%
@@ -82,14 +132,14 @@ books %>%
       geom_bar(aes(x=MonthRead, y=BooksRead), stat="identity",
                      fill= "turquoise", color = "blue") +
       scale_y_continuous(name="Number of Books Read", expand = c(0,0),
-                         breaks = seq(0,30,5), limits = c(0,30)) +
+                         breaks = seq(0,35,5), limits = c(0,35)) +
       scale_x_date(date_breaks="1 month", date_labels="%Y-%b", expand=c(0,0)) +
       theme(panel.background = element_blank(),
             axis.line = element_line(),
             axis.text.x =element_text(angle=-90))
 
 # Pages by month
-books %>%
+rereads %>%
       filter(!is.na(`Date Read`)) %>%
       mutate(MonthRead = floor_date(`Date Read`, "month")) %>%
       group_by(MonthRead) %>%
@@ -99,7 +149,7 @@ books %>%
       geom_bar(aes(x=MonthRead, y=PagesRead), stat="identity",
                fill= "turquoise", color = "blue") +
       scale_y_continuous(name="Number of Pages Read", expand = c(0,0),
-                         breaks = seq(0,10000,2500), limits = c(0,10000)) +
+                         breaks = seq(0,10000,2500), limits = c(0,12000)) +
       scale_x_date(date_breaks="1 month", date_labels="%Y-%b", expand=c(0,0)) +
       theme(panel.background = element_blank(),
             axis.line = element_line(),
@@ -132,8 +182,8 @@ books %>%
 # I added much of my library in the first few days of using Goodreads.
 # Set a date limit to exclude those outlier days
 books %>%
-   mutate(MonthAdded=round_date(`Date Added`,"month"),
-          MonthRead=round_date(`Date Read`,"month")) %>%
+   mutate(MonthAdded=floor_date(`Date Added`,"month"),
+          MonthRead=floor_date(`Date Read`,"month")) %>%
    ggplot(data=.) +
       geom_bar(aes(x=MonthAdded,y=..count..), fill = NA,
                      color = "blue") +
@@ -227,7 +277,7 @@ books %>%
 
 ### Average books read by month
 ```{r BooksMonth}
-books %>%
+rereads %>%
       filter(!is.na(`Date Read`)) %>%
       mutate(MonthYear = floor_date(`Date Read`, "month"),
              Month = month(MonthYear, label = TRUE, abbr = TRUE)) %>%
