minor text mod to fix failed deploy

--- a/LowPriority.Rmd
+++ b/LowPriority.Rmd
@@ -22,7 +22,7 @@ widebooks <- books %>%
 
 ## Reverse rankings
 
-Much of my library was added with little thought in 2014 from very old to-read lists I have been keeping my whole life.
+Much of my library was added in 2014 assembled with little thought from very old to-read lists I have been keeping my whole life.
 
 To help slowly chip away at books on my list that no longer pique my interest, here is a reverse ranking of books to look at for deletion or better classification:
 ```{r lowRanking}
