--- a/GR_graphs.Rmd
+++ b/GR_graphs.Rmd
@@ -4,13 +4,13 @@ author: "Sarah Heidmann"
 output: html_document
 ---
 
-*Data through 28 Mar 2022*
+*Data through 23 Apr 2022*
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE)
 library(tidyverse)
 library(lubridate)
 library(knitr)
-books <- read_csv("data/goodreads_library_export_20220328.csv",
+books <- read_csv("data/goodreads_library_export_20220423.csv",
                   col_types = cols(`Date Read`=col_date(format="%Y/%m/%d"),
                                    `Date Added`=col_date(format="%Y/%m/%d")))
 # Manually add additional dates for rereads
@@ -113,7 +113,7 @@ rereads %>%
       geom_point(aes(x=`Date Read`, y=`Original Publication Year`),
                  color = "blue") +
       scale_y_continuous(name="Publication Date", expand = c(0,0),
-                         limits = c(earliestPub, maxYear)) +
+                         limits = c(earliestPub, maxYear+1)) +
       theme(panel.background = element_blank(),
             axis.line = element_line())
 ```
