--- a/GR_graphs.Rmd
+++ b/GR_graphs.Rmd
@@ -4,13 +4,13 @@ author: "Sarah Heidmann"
 output: html_document
 ---
 
-*Data through 23 Apr 2022*
+*Data through 28 May 2022*
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE)
 library(tidyverse)
 library(lubridate)
 library(knitr)
-books <- read_csv("data/goodreads_library_export_20220423.csv",
+books <- read_csv("data/goodreads_library_export_20220528.csv",
                   col_types = cols(`Date Read`=col_date(format="%Y/%m/%d"),
                                    `Date Added`=col_date(format="%Y/%m/%d")))
 # Manually add additional dates for rereads
@@ -53,7 +53,8 @@ reread_dates <- tribble(
       35, "2021-01-29", # Murderbot
       36, NA, # Giver
       37, NA, # Animal Farm
-      38, NA # Sherlock 3
+      38, NA, # Sherlock 3
+      39, NA # Hot Zone
 ) %>%
       mutate(Date = date(Date))
 rereads <- books %>% 
