--- a/GR_graphs.Rmd
+++ b/GR_graphs.Rmd
@@ -4,13 +4,13 @@ author: "Sarah Heidmann"
 output: html_document
 ---
 
-*Data through 15 Jan 2023*
+*Data through 28 Jan 2023*
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE)
 library(tidyverse)
 library(lubridate)
 library(knitr)
-books <- read_csv("data/goodreads_library_export_20230115.csv",
+books <- read_csv("data/goodreads_library_export_20230128.csv",
                   col_types = cols(`Date Read`=col_date(format="%Y/%m/%d"),
                                    `Date Added`=col_date(format="%Y/%m/%d")))
 # Manually add additional dates for rereads
@@ -59,6 +59,7 @@ reread_dates <- tribble(
       NA, # Animal Farm
       NA, # Sherlock 3
       "2023-01-12", # Atomic Habits
+      "2023-01-26", # How Stella Learned to Talk
       NA, # Hot Zone
       "2022-12-25" # Almanack of Naval
 ) %>%
@@ -180,6 +181,10 @@ books %>%
       arrange(desc(`Read Count`)) %>%
       select(Title, `Read Count`) %>%
       filter(`Read Count` >1) %>%
+      # Shorten titles for easier plotting
+      # Extract everything before parentheses or colon
+      mutate(Title = str_split(Title, "[(]", simplify=TRUE)[,1],
+             Title = str_split(Title, "[:]", simplify=TRUE)[,1]) %>% 
       ggplot(data=.) +
       geom_bar(aes(x=reorder(Title, -`Read Count`), y=`Read Count`), 
                stat="identity",
