--- a/GR_graphs.Rmd
+++ b/GR_graphs.Rmd
@@ -4,13 +4,13 @@ author: "Sarah Heidmann"
 output: html_document
 ---
 
-*Data through 12 Feb 2023*
+*Data through 1 Mar 2023*
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE)
 library(tidyverse)
 library(lubridate)
 library(knitr)
-books <- read_csv("data/goodreads_library_export_20230212.csv",
+books <- read_csv("data/goodreads_library_export_20230301.csv",
                   col_types = cols(`Date Read`=col_date(format="%Y/%m/%d"),
                                    `Date Added`=col_date(format="%Y/%m/%d")))
 # Manually add additional dates for rereads
@@ -18,37 +18,27 @@ books <- read_csv("data/goodreads_library_export_20230212.csv",
 reread_dates <- tribble(
       ~Date,
       "2022-10-15", # Fellowship of the Ring
+      "2023-02-16", # Two Towers
       "2019-01-19", # Dealing w Dragons
       "2021-05-15", # Da Vinci Code
-      "2018-04-15", # Harry 1
-      "2019-10-03", # Harry 1
-      "2018-04-15", # Harry 2
-      "2019-10-04", # Harry 2
-      "2018-04-19", # Harry 3
-      "2019-10-04", # Harry 3
-      "2018-04-25", # Harry 4
-      "2019-10-08", # Harry 4
-      "2018-05-03", # Harry 5
-      "2019-10-15", # Harry 5
-      "2018-05-06", # Harry 6
-      "2019-10-19", # Harry 6
-      "2018-05-08", # Harry 7
-      "2019-10-26", # Harry 7
+      "2018-04-15", "2019-10-03", "2023-02-26", # Harry 1
+      "2018-04-15", "2019-10-04", "2023-02-27", # Harry 2
+      "2018-04-19", "2019-10-04", "2023-02-28", # Harry 3
+      "2018-04-25", "2019-10-08", NA, # Harry 4
+      "2018-05-03", "2019-10-15", # Harry 5
+      "2018-05-06", "2019-10-19", # Harry 6
+      "2018-05-08", "2019-10-26", # Harry 7
       "2023-01-02", #Jurassic Park
       "2020-08-21", # Eragon
       "2021-01-28", # Dune
       NA, # Ender's Game 
-      NA, # Hobbit
-      "2022-09-24", # Hobbit
-      "2017-05-20", # Little Prince
-      "2020-12-21", # Little Prince
+      NA, "2022-09-24", # Hobbit
+      "2017-05-20", "2020-12-21", # Little Prince
       NA, # Fahrenheit 451
       NA, # Night
       "2021-08-12", # Wrinkle in Time
-      "2018-05-26", # Sun and Her Flowers
-      "2019-08-21", # Sun and Her Flowers
-      NA, # Brave New World
-      "2020-12-02", # Brave New World
+      "2018-05-26", "2019-08-21", # Sun and Her Flowers
+      NA, "2020-12-02", # Brave New World
       "2019-07-06", # Fifth Season
       NA, # Once Upon a Marigold
       NA, # House of the Scorpion
